changes to fix footer contact bar spacing issues

--- a/core-styles/sections/_footer.scss
+++ b/core-styles/sections/_footer.scss
@@ -6,8 +6,6 @@
 		overflow: hidden;
 
 		.shell {
-			border-top: 12px solid $brand-color;
-			border-top: 12px solid $brand-color;
 			box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
 
 			@include media-query(portable) {
